10. Services/2. Advanced/clusterip.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-server
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec: 
      containers:
      - name: nginx
        image: nginx
        ports: 
        - containerPort: 80
