10. Services/2. Advanced/pods-dns.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-nodename
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
spec:
  containers:
  - name: app
    image: alpine
    command: 
    - sleep
    - '3600'
