10. Services/2. Advanced/temp-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-svc-test
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command:
    - sleep
    - '3600'
