10. Services/2. Advanced/clusterip-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports: 
  - name:
    protocol: TCP
    port: 8080
    targetPort: 80
