10. Services/2. Advanced/nodeport-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
spec:
  type: NodePort
  selector:
    app: frontend
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 80      
    nodePort: 30099
