10. Services/2. Advanced/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
          - path: "/cart"
            pathType: Prefix
            backend:
              service:
                name: svc1
                port:
                  number: 80
          - path: "/products"
            pathType: Prefix
            backend:
              service:
                name: svc2
                port:
                  number: 80
